bat.bool1.sumdouble.SumDouble.scala.error
Compilation error:
SumDouble:4: error: reassignment to val
  if (a=b){
       ^SumDouble:6: error: type mismatch;
 found   : Unit
 required: Integer
  else if (a!=b){
       ^