bat.bool1.sumdouble.SumDouble.scala.code
def sumDouble(a: Integer, b: Integer): Integer = {
  
  if (a=b){
    return 2*(a+b);}
  else if (a!=b){
    return a+b;
  }
  }
